--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "execa": "^4.0.1",
+    "fs": "^0.0.1-security",
+    "knex": "<0.20.0",
+    "pg": "^8.0.3",
+    "sqlite3": "latest",
     "strapi": "3.0.0-beta.20.3",
     "strapi-admin": "3.0.0-beta.20.3",
-    "strapi-utils": "3.0.0-beta.20.3",
-    "strapi-plugin-content-type-builder": "3.0.0-beta.20.3",
+    "strapi-connector-bookshelf": "3.0.0-beta.20.3",
     "strapi-plugin-content-manager": "3.0.0-beta.20.3",
-    "strapi-plugin-users-permissions": "3.0.0-beta.20.3",
+    "strapi-plugin-content-type-builder": "3.0.0-beta.20.3",
     "strapi-plugin-email": "3.0.0-beta.20.3",
     "strapi-plugin-upload": "3.0.0-beta.20.3",
-    "strapi-connector-bookshelf": "3.0.0-beta.20.3",
-    "knex": "<0.20.0",
-    "sqlite3": "latest",
-    "pg": "^8.0.3",
-    "fs": "^0.0.1-security"
+    "strapi-plugin-users-permissions": "3.0.0-beta.20.3",
+    "strapi-utils": "3.0.0-beta.20.3"
   },
   "author": {
     "name": "A Strapi developer"
