--- a/app.json
+++ b/app.json
@@ -7,6 +7,9 @@
   "image": "heroku/nodejs",
   "buildpacks": [
     {
+      "url": "https://github.com/timanovsky/subdir-heroku-buildpack"
+    },
+    {
       "url": "heroku/nodejs"
     }
   ]
