--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "strapi-plugin-email": "3.0.0",
     "strapi-plugin-upload": "3.0.0",
     "strapi-plugin-users-permissions": "3.0.0",
-    "strapi-utils": "3.0.0"
+    "strapi-utils": "3.0.0",
+    "mime-types": "^2.1.27",
+    "strapi-plugin-graphql": "3.2.5"
+
+
   },
   "author": {
     "name": "A Strapi developer"
