--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "knex": "<0.20.0",
+    "mime-types": "^2.1.27",
+    "pg": "^8.5.0",
+    "sqlite3": "latest",
     "strapi": "3.2.5",
     "strapi-admin": "3.2.5",
-    "strapi-utils": "3.2.5",
-    "strapi-plugin-content-type-builder": "3.2.5",
-    "strapi-plugin-content-manager": "3.2.5",
-    "strapi-plugin-users-permissions": "3.2.5",
-    "strapi-plugin-email": "3.2.5",
-    "strapi-plugin-upload": "3.2.5",
     "strapi-connector-bookshelf": "3.2.5",
-    "knex": "<0.20.0",
-    "sqlite3": "latest",
-    "mime-types": "^2.1.27",
-    "strapi-plugin-graphql": "3.2.5"
+    "strapi-plugin-content-manager": "3.2.5",
+    "strapi-plugin-content-type-builder": "3.2.5",
+    "strapi-plugin-email": "3.2.5",
+    "strapi-plugin-graphql": "3.2.5",
+    "strapi-plugin-upload": "3.2.5",
+    "strapi-plugin-users-permissions": "3.2.5",
+    "strapi-utils": "3.2.5"
   },
   "author": {
     "name": "A Strapi developer"
