--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "strapi-tex",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
@@ -11,30 +11,30 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "knex": "<0.20.0",
-    "mime-types": "^2.1.27",
+    "strapi": "3.3.2",
+    "strapi-admin": "3.3.2",
+    "strapi-utils": "3.3.2",
+    "strapi-plugin-content-type-builder": "3.3.2",
+    "strapi-plugin-content-manager": "3.3.2",
+    "strapi-plugin-users-permissions": "3.3.2",
+    "strapi-plugin-email": "3.3.2",
+    "strapi-plugin-upload": "3.3.2",
+    "strapi-connector-bookshelf": "3.3.2",
     "pg": "^8.5.0",
+    "knex": "<0.20.0",
     "sqlite3": "latest",
-    "strapi": "3.2.5",
-    "strapi-admin": "3.2.5",
-    "strapi-connector-bookshelf": "3.2.5",
-    "strapi-plugin-content-manager": "3.2.5",
-    "strapi-plugin-content-type-builder": "3.2.5",
-    "strapi-plugin-email": "3.2.5",
-    "strapi-plugin-graphql": "3.2.5",
-    "strapi-plugin-upload": "3.2.5",
-    "strapi-plugin-users-permissions": "3.2.5",
-    "strapi-utils": "3.2.5"
+    "mime-types": "^2.1.27",
+    "strapi-plugin-graphql": "3.2.5"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "4895f102-293d-4e93-8074-b9fe595f4587",
+    "uuid": "11de020f-c1eb-46c1-99ba-b47ca3f6bbe8",
     "template": "https://github.com/strapi/strapi-template-blog"
   },
   "engines": {
-    "node": ">=10.0.0",
+    "node": ">=10.16.0 <=14.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
