--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi",
-    "heroku-prebuild": "node scripts/postgres-env.js"
+    "heroku-prebuild": "node scripts/postgres-env.js",
+    "heroku-postbuild": "strapi build && node scripts/postinstall.js"
   },
   "devDependencies": {},
   "dependencies": {
+    "fs": "^0.0.1-security",
     "knex": "<0.20.0",
     "pg": "^8.5.1",
     "sqlite3": "latest",
@@ -23,7 +25,8 @@
     "strapi-plugin-email": "3.3.4",
     "strapi-plugin-upload": "3.3.4",
     "strapi-plugin-users-permissions": "3.3.4",
-    "strapi-utils": "3.3.4"
+    "strapi-utils": "3.3.4",
+    "uuidv4": "^6.2.6"
   },
   "author": {
     "name": "A Strapi developer"
