--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi",
-    "heroku-prebuild": "node scripts/postgres-env.js",
     "heroku-postbuild": "strapi build && node scripts/postinstall.js"
   },
   "devDependencies": {},
@@ -16,6 +15,7 @@
     "fs": "^0.0.1-security",
     "knex": "<0.20.0",
     "pg": "^8.5.1",
+    "pg-connection-string": "^2.5.0",
     "sqlite3": "latest",
     "strapi": "3.6.3",
     "strapi-admin": "3.6.3",
