--- a/package.json
+++ b/package.json
@@ -12,33 +12,28 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "fs": "^0.0.1-security",
-    "knex": "<0.20.0",
-    "pg": "^8.5.1",
-    "pg-connection-string": "^2.5.0",
-    "sqlite3": "latest",
-    "strapi": "3.6.3",
-    "strapi-admin": "3.6.3",
-    "strapi-connector-bookshelf": "3.6.3",
-    "strapi-plugin-content-manager": "3.6.3",
-    "strapi-plugin-content-type-builder": "3.6.3",
-    "strapi-plugin-email": "3.6.3",
-    "strapi-plugin-i18n": "^3.6.3",
-    "strapi-plugin-upload": "3.6.3",
-    "strapi-plugin-users-permissions": "3.6.3",
-    "strapi-provider-upload-cloudinary": "^3.6.3",
-    "strapi-utils": "3.6.3",
-    "uuidv4": "^6.2.6"
+    "strapi": "3.6.8",
+    "strapi-admin": "3.6.8",
+    "strapi-utils": "3.6.8",
+    "strapi-plugin-content-type-builder": "3.6.8",
+    "strapi-plugin-content-manager": "3.6.8",
+    "strapi-plugin-users-permissions": "3.6.8",
+    "strapi-plugin-email": "3.6.8",
+    "strapi-plugin-upload": "3.6.8",
+    "strapi-plugin-i18n": "3.6.8",
+    "strapi-connector-bookshelf": "3.6.8",
+    "knex": "0.21.18",
+    "sqlite3": "5.0.0"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "7107e57d-a7dd-41a3-82c5-b50d4d6e962a"
+    "uuid": "95497efc-f0c8-4a83-8333-9fe830e88998"
   },
   "engines": {
     "node": ">=10.16.0 <=14.x.x",
-    "npm": ">=6.0.0"
+    "npm": "^6.0.0"
   },
   "license": "MIT"
 }
